--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -834,6 +834,12 @@ button.dim:active:before {
 .glyphicon.fa {
   font-family: FontAwesome;
 }
+.glyphicon.fas {
+  font-family: FontAwesome;
+}
+.glyphicon.fab {
+  font-family: FontAwesome;
+}
 
 .inline {
   display: inline-block !important;
