--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,10 +1,10 @@
 {% if counter > 5 %}
-    <div class="col-lg-6 col-lg-offset-6">
+  <div class="c-navigation-bar">
 		<div class="pag-holder"></div>
 	</div>
 {% endif %}
 {% if counter == 0 %}
-    <div class="col-lg-8 col-lg-offset-2">
+  <div class="col-lg-8 col-lg-offset-2">
 		<p>Sorry,no blog！</p>
-    </div>
+  </div>
 {% endif %}
