--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1931,7 +1931,7 @@ ul.clear-list:first-child {
 }
 
 .social-comment .social-comment, .vote-info, .vote-title {
-  margin-left: 45px;
+  margin-left: 3rem;
 }
 
 .social-avatar {
@@ -1966,6 +1966,10 @@ ul.clear-list:first-child {
   &:hover {
     background: #fbfbfb;
   }
+}
+
+.c-navigation-bar {
+  text-align: center;
 }
 
 .vote-actions {
@@ -2433,11 +2437,11 @@ body {
       .active > a {
         background: 0 0;
         color: #fff;
-        border-top: 6px solid #3385FF;
+        border-top: 6px solid $primary-color;
         &:hover {
           background: 0 0;
           color: #fff;
-          border-top: 6px solid #3385FF;
+          border-top: 6px solid $primary-color;
         }
       }
       li > a {
