블로그 꽃단장

--- a/_includes/category.html
+++ b/_includes/category.html
@@ -39,7 +39,7 @@ $(function(){
                             <div class="small m-b-xs">
                                 <span class="text-muted">
                                     <i class="fa fa-clock-o"></i>
-                                    {{ post.date | date: "%-d %b %Y" }}
+                                    {{ post.date | date: "%Y-%m-%d" }}
                             </span>
                             </div>
                             <p>
