--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,10 @@ layout: default
                         {% endfor %}
                     </div>
                     <div class="text-center article-title">
-                    <span class="text-muted"><i class="fa fa-clock-o"></i> {{ page.date | date: "%-d %b %Y" }}</span>
+                    <span class="text-muted">
+                        <i class="fa fa-clock-o"></i>
+                        {{ page.date | date: "%Y-%m-%d" }}
+                    </span>
                         <h1>
                             {{ page.title }}
                         </h1>
