--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1231,7 +1231,7 @@ label.error {
 body {
   font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #2f4050;
-  font-size: 13px;
+  font-size: 16px;
   color: #676a6c;
   height: 100%;
 }
@@ -1486,7 +1486,7 @@ code {
 }
 
 .text-muted {
-  color: #888;
+  color: #b4b6b8;
 }
 
 .text-white {
@@ -1989,7 +1989,7 @@ ul.clear-list:first-child {
   &:focus, &:hover {
     color: inherit;
   }
-  font-size: 18px;
+  font-size: 2.2rem;
   font-weight: 600;
   margin-top: 5px;
   margin-bottom: 2px;
